# research-assistant

./: Cargo.toml  config.toml  notes.md
examples/: dump_raw_json.rs  list_source_files.rs  parse_data.rs
jq/: util.jq
src/: config.rs  data.rs  files.rs  lib.rs  reader.rs
src/config/: impl_serde.rs
src/data/: serde_impl.rs
vim-dadbod/: rc.lua
vim-dadbod/queries/book_of_hours/: main.jq
