[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name    = "research_assistant"
version = "0.1.0"

[dependencies]
anyhow      = "1.0.89"
encoding_rs = { version = "0.8.34", features = ["serde"] }
globset     = "0.4.15"
serde       = { version = "1.0.210", features = ["derive"] }
serde_json  = "1.0.128"
shellexpand = { version = "3.1.0", features = ["path"] }
toml        = "0.8.19"
walkdir     = "2.5.0"
