[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name    = "research_assistant"
version = "0.1.0"

[dependencies]
anyhow         = "1.0.89"
encoding_rs    = { version = "0.8.34", features = ["serde"] }
encoding_rs_io = "0.1.7"
globset        = { version = "0.4.15", features = ["serde1"] }
serde          = { version = "1.0.210", features = ["derive"] }
serde_json     = { version = "1.0.128", features = ["trailing_comma", "extended_strings"] }
shellexpand    = { version = "3.1.0", features = ["path"] }
toml           = "0.8.19"
walkdir        = "2.5.0"

[patch.crates-io]
serde_json = { git = "https://github.com/titaniumtraveler/serde-json", branch = "fork/book_of_hours" }
